docs/7.52/md/abenamdp.md
---
title: "AMDP - ABAP Managed Database Procedures"
description: |
  ABAP Managed Database Procedures are a framework for managing and calling -   stored procedures(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstored_procedure_glosry.htm 'Glossary Entry') or database procedures(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendatab
version: "7.52"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp.htm"
abapFile: "abenamdp.htm"
keywords: ["do", "if", "case", "try", "method", "class", "data", "abenamdp"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) → 

AMDP - ABAP Managed Database Procedures

ABAP Managed Database Procedures are a framework for managing and calling

-   [stored procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstored_procedure_glosry.htm "Glossary Entry") or [database procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendatabase_procedure_glosry.htm "Glossary Entry") and

-   [database functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendatabase_function_glosry.htm "Glossary Entry")

in [AS ABAP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_personality_glosry.htm "Glossary Entry"). Accordingly, the ABAP Managed Database Procedures manage

-   [AMDP procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_procedure_glosry.htm "Glossary Entry") and

-   [AMDP functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_function_glosry.htm "Glossary Entry")

A procedure or function of this type is implemented in a database-specific language ( [SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_script_glosry.htm "Glossary Entry"), [L](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenllang_glosry.htm "Glossary Entry"), ...) in an

-   [AMDP procedure implementation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_procedure_method_glosry.htm "Glossary Entry") or

-   [AMDP function implementation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_function_method_glosry.htm "Glossary Entry")

and at the same time as an [AMDP method](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_method_glosry.htm "Glossary Entry") in an [AMDP class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_class_glosry.htm "Glossary Entry").

The following sections describe the components of AMDP:

-   [AMDP - Classes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_classes.htm)

-   [AMDP - Methods](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_methods.htm)

-   [AMDP - Inheritance](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_inheritance.htm)

-   [AMDP - Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_calls.htm)

-   [AMDP - Client Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_client_handling.htm)

-   [AMDP - BAdIs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_badis.htm)

-   [AMDP - Database Connections](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_db_connections.htm)

-   [AMDP Macros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_macros.htm)

-   [AMDP - Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_exceptions.htm)

-   [AMDP - Examples](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexas.htm)

Currently, AMDP only supports database procedures and functions from the SAP HANA database. In principle, however, AMDP is designed so that stored procedures and functions from other database systems can also be supported. The constant CALL\_AMDP\_METHOD of the class [CL\_ABAP\_DBFEATURES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_dbfeatures.htm) can be used to query whether the current database supports AMDP procedures.

Notes

-   The [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadt_glosry.htm "Glossary Entry") are better suited for the editing of database procedures and functions in [AMDP methods](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_method_glosry.htm "Glossary Entry") than [Class Builder](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_builder_glosry.htm "Glossary Entry") in [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry"). This means that AMDP classes can only be edited with the ABAP Development Tools (ADT). AMDP classes can also be displayed in Class Builder.

-   ABAP developers or consumers do not need separate users for the database system to manage and call database procedures and database functions using AMDP Instead, the AS ABAP logged on to the database system using its work processes requires the correct authorizations to manage database procedures and functions using AMDP. Missing authorizations can be detected using transaction SICK.

-   If the current database of an AS ABAP is an SAP HANA database and ABAP programs access [SQL Script procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_script_procedure_glosry.htm "Glossary Entry") used to swap out code from ABAP programs to the database, ABAP Managed Database Procedures are the replacement technology for [database procedure proxies](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_script.htm). Database procedure proxies are still recommended when using a [secondary connection](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensecondary_db_connection_glosry.htm "Glossary Entry") to access SQLScript procedures that exist in a different SAP HANA database.

-   To manage and call database procedures and database functions with [Native SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennative_sql_glosry.htm "Glossary Entry"), the AMDP framework uses the [Native SQL interface](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennative_sql_interface_glosry.htm "Glossary Entry") to access the database.

-   Table buffering is bypassed when using [AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_buffering_glosry.htm "Glossary Entry").

Programming Guideline

The programming guideline [Use Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendatabase_access_guidl.htm "Guideline") is particularly relevant for AMDP too. The use of AMDP is not recommended if the same task can be achieved using Open SQL (or [ABAP CDS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds.htm)). The executable example [AMDP, Comparison with Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_vs_open_sql_abexa.htm) demonstrates how a database access not programmed well in Open SQL can often be optimized using an improved use of Open SQL, removing the need to use AMDP in these cases. AMDP should be used only if it enables database-specific functions to be accessed that do not exist in Open SQL (see the executable example for [Currency Conversion](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_script_curr_conv_abexa.htm)) or if large process flows or analyses that incur repeated transports of large amounts of data between the database and the application server can be swapped out.

Continue
[AMDP - Classes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_classes.htm)
[AMDP - Methods](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_methods.htm)
[AMDP - Inheritance](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_inheritance.htm)
[AMDP - Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_calls.htm)
[AMDP - Client Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_client_handling.htm)
[AMDP - BAdIs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_badis.htm)
[AMDP - Database Connections](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_db_connections.htm)
[AMDP Macros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_macros.htm)
[AMDP - Exception Classes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_exceptions.htm)
[AMDP - Examples](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexas.htm)